<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.stytch.sdk.StytchTitleTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="27dp"
            android:layout_marginTop="33dp"
            android:textSize="30sp"
            android:text="@string/enter_phone_number"
            />

        <com.stytch.sdk.StytchSubtitleTextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="33dp"
            android:layout_marginTop="23dp"
            android:textSize="18sp"
            android:text="@string/sms_passcode_home_screen_description"
            />

        <LinearLayout
            android:id="@+id/phone_number_text_field_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="22dp"
            android:layout_marginHorizontal="27dp"
            >

            <com.stytch.sdk.StytchTextView
                android:id="@+id/plus_one_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/plus_1"
                />

            <com.stytch.sdk.StytchEditText
                android:id="@+id/phone_number_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:digits="0123456789"
                android:inputType="phone"
                android:hint="@string/phone_number_hint"
                android:autofillHints=".AUTOFILL_HINT_PHONE_NUMBER"
                android:paddingHorizontal="9dp"
                />

        </LinearLayout>

        <com.stytch.sdk.StytchErrorTextView
            android:id="@+id/invalid_phone_number_error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/phone_number_text_field_row"
            app:layout_constraintStart_toStartOf="@id/phone_number_text_field_row"
            android:layout_marginTop="10dp"
            android:text="@string/invalid_phone_number_please_try_again"
            android:visibility="gone"
            />

        <com.stytch.sdk.StytchSMSConsentTextView
            android:id="@+id/sms_consent_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal"
            android:text="@string/sms_consent_text"
            app:layout_constraintBottom_toTopOf="@id/continue_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.stytch.sdk.StytchButton
            android:id="@+id/continue_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintBottom_toTopOf="@id/powered_by_stytch_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="27dp"
            android:layout_marginBottom="18dp"
            android:text="@string/_continue"
            />

        <ImageView
            android:id="@+id/powered_by_stytch_image"
            android:layout_width="161dp"
            android:layout_height="16dp"
            android:src="@drawable/powered_by_stytch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="23dp"
            android:contentDescription="@string/powered_by_stytch"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
