<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.stytch.sdk.StytchTitleTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="27dp"
            android:layout_marginTop="33dp"
            tools:textSize="30sp"
            android:text="@string/enter_email"
            />

        <com.stytch.sdk.StytchSubtitleTextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="33dp"
            android:layout_marginTop="23dp"
            tools:textSize="18sp"
            android:text="@string/magic_links_home_screen_description"
            />

        <com.stytch.sdk.StytchEditText
            android:id="@+id/email_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="27dp"
            android:layout_marginTop="22dp"
            android:inputType="textEmailAddress"
            android:hint="@string/example_email_com"
            android:autofillHints=".AUTOFILL_HINT_EMAIL_ADDRESS"
            android:paddingHorizontal="9dp"
            />

        <com.stytch.sdk.StytchErrorTextView
            android:id="@+id/error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email_text_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="3dp"
            android:paddingHorizontal="27dp"
            android:gravity="start"
            android:textAlignment="textStart"
            android:visibility="gone"
            />

        <com.stytch.sdk.StytchButton
            android:id="@+id/continue_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintBottom_toTopOf="@id/powered_by_stytch_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="27dp"
            android:layout_marginBottom="18dp"
            android:text="@string/_continue"
            />

        <ImageView
            android:id="@+id/powered_by_stytch_image"
            android:layout_width="161dp"
            android:layout_height="16dp"
            android:src="@drawable/powered_by_stytch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="23dp"
            android:contentDescription="@string/powered_by_stytch"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
