<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.stytch.sdk.StytchTitleTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="27dp"
            android:layout_marginTop="33dp"
            tools:textSize="30sp"
            android:text="@string/check_your_email"
            />

        <com.stytch.sdk.StytchSubtitleTextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="33dp"
            android:layout_marginTop="23dp"
            tools:textSize="18sp"
            tools:text="An email was sent to kyle@stytch.com. Didn't get it?"
            />

        <com.stytch.sdk.StytchButton
            android:id="@+id/try_again_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintBottom_toTopOf="@id/powered_by_stytch_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="27dp"
            android:layout_marginBottom="18dp"
            android:text="@string/try_again"
            />

        <ImageView
            android:id="@+id/powered_by_stytch_image"
            android:layout_width="161dp"
            android:layout_height="16dp"
            android:src="@drawable/powered_by_stytch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="23dp"
            android:contentDescription="@string/powered_by_stytch"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
