<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.stytch.sdk.StytchTitleTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="27dp"
            android:layout_marginTop="33dp"
            tools:textSize="30sp"
            android:text="@string/sign_up_or_log_in"
            />

        <com.stytch.sdk.StytchSubtitleTextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="33dp"
            android:layout_marginTop="23dp"
            tools:textSize="18sp"
            android:text="@string/email_magic_link_or_sms_one_time_passcode_home_description"
            />

        <LinearLayout
            android:id="@+id/email_and_phone_number_buttons_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/email_button"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginHorizontal="15dp"
                android:background="@color/fourthBrandColor"
                >

                <ImageView
                    android:id="@+id/email_button_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/phone_icon"
                    />

                <TextView
                    android:id="@+id/email_button_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/email_button_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="30dp"
                    android:text="@string/email"
                    android:textSize="18sp"
                    android:textColor="@color/backgroundColor"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/phone_number_button"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginHorizontal="15dp"
                android:background="@color/fourthBrandColor"
                >

                <ImageView
                    android:id="@+id/phone_number_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/email_icon"
                    />

                <TextView
                    android:id="@+id/phone_number_button_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/phone_number_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="30dp"
                    android:text="@string/phone_number"
                    android:textSize="18sp"
                    android:textColor="@color/backgroundColor"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>